force-app/main/default/objects/ARF_Credit_Applicant__c/ARF_Credit_Applicant__c.object-meta.xml
<CustomObject>
    <label>Credit Applicant</label>
    <pluralLabel>Credit Applicants</pluralLabel>
    <nameField>
        <label>Applicant Number</label>
        <displayFormat>APPL-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>