force-app/main/default/objects/ARF_Credit_Applicant__c/fields/Credit_Application__c.field-meta.xml
<CustomField>
    <fullName>Credit_Application__c</fullName>
    <label>Credit Application</label>
    <type>MasterDetail</type>
    <referenceTo>ARF_Credit_Application__c</referenceTo>
    <relationshipName>Credit_Applicants</relationshipName>
    <relationshipLabel>Applicants</relationshipLabel>
    <relationshipOrder>0</relationshipOrder>
</CustomField>