force-app/main/default/objects/ARF_Credit_Applicant__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Text</type>
    <length>100</length>
</CustomField>